--- a/src/components/SnakeList/SnakeList.css
+++ b/src/components/SnakeList/SnakeList.css
@@ -84,6 +84,7 @@ body {
   letter-spacing: 0.1rem;
   line-height: 1.7;
   color: #3d3d3d;
+  background-color: white;
   margin-bottom: 2.5rem;
   width: 100%;
   height: 75px;
